Improved column spacing, Mobile feedback, & sundry fixes

--- a/app/components/Chatbot/widgit.css
+++ b/app/components/Chatbot/widgit.css
@@ -10,12 +10,6 @@
   background: var(--colors-cool-grey-100);
 }
 
-@media (max-width: 780px) {
-  .button {
-    width: 100%;
-  }
-}
-
 .widget-ask {
   position: relative;
 }
@@ -45,8 +39,6 @@
 }
 
 .mobile-caution {
-  position: absolute;
-  top: calc(100% + var(--spacing-8));
   display: flex;
 }
 
@@ -88,11 +80,22 @@
 }
 
 .followups-container {
-  padding-bottom: calc(106px + var(--spacing-48));
+  padding-bottom: calc(106px + var(--spacing-80));
+}
+
+.followup-button {
+  justify-content: left !important;
+}
+
+.mobile-chat-width {
+  width: 87.2vw;
 }
 
 @media (max-width: 780px) {
+  .button {
+    width: 100%;
+  }
   .widget-ask.fixed {
-    bottom: 56px;
+    bottom: var(--spacing-16);
   }
 }
